samples/_failures_safe/1761125297_e8d9cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28f10cdd.c: In function ‘main’:
./samples/SAFE/__tmp_28f10cdd.c:143: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_28f10cdd.c:142:5: error: expected declaration or statement at end of input
  142 |     if
      |     ^~
